[package]
name = "wacm"
version = "0.1.0"
authors = ["Andrew Sisley <a.j.sisley@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0.104", features = ["derive"] }